--- a/Graphs/index.html
+++ b/Graphs/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hours of TV Watched Each Month</title>
+  <title>Provinces Data</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
